# macroquad_tamagotchi

./: .gitignore  Cargo.toml  README.md  bird_ready_get_gif.sh
assets/: bird_ready.json  glaxnimate_rectangles.json  glaxnimate_triangle.json  glaxnimate_white_triangle.json
assets_src/: bird_ready.sif  keke.glsl  keke.html  rectangles.rawr  triangle.rawr
src/: main.rs  model.rs  nanolottie.rs  path_rendering.rs  shape_rendering.rs
src/path_rendering/: curve.rs  fill.rs  renderer.rs  stroke.rs  text.rs  vertex.rs
src/shape_rendering/: path.rs  utils.rs
