[package]
name = "macroquad_tamagotchi"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { path = "../macroquad" }
# macroquad = "0.4"
miniquad = { git = "https://github.com/birhburh/miniquad", branch = "triangle_strip"}
# miniquad = { path = "../miniquad", features = ["log-impl"] }

# contrast_renderer = { git = "https://github.com/birhburh/contrast_renderer", branch = "main"}
# contrast_renderer = { path = "../contrast_renderer" }
geometric_algebra = "0.3.0"

glam = {version = "0.27.0", features = ["scalar-math"] } # to conform to macroquad
euclid = "0.22.7"
# lottie = {path="../lottie-rs/crates/lottie"}
# lottie = {git = "https://github.com/birhburh/lottie-rs", branch = "temp_changes"}
# nanoserde = {version = "0.2.0-beta.0", default-features = false, features = ["std", "json"]}
# nanoserde = {path="../nanoserde", default-features = false, features = ["std", "json"]}
nanoserde = {git = "https://github.com/not-fl3/nanoserde", default-features = false, features = ["std", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
# miniquad = { path="../miniquad", features = ["log-impl"] }
miniquad = { git = "https://github.com/birhburh/miniquad", branch = "triangle_strip"}
